fixed padding and double scrollbars

--- a/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
@@ -363,7 +363,8 @@
 	.edit-site-layout__canvas {
 		bottom: 16px;
 		top: 16px;
-		padding: 0 16px;
+		left: 12px; // the default styles for this undersizes the width by 24px so we want to center this
+		padding: 0 4px 0 16px;
 	}
 
 	.edit-site-resizable-frame__handle {
