--- a/plugins/woocommerce-admin/client/customize-store/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/style.scss
@@ -19,6 +19,7 @@
 
 body.woocommerce-customize-store.js.is-fullscreen-mode {
 	margin-top: 0 !important;
+	height: unset;
 }
 
 .woocommerce-cys-layout {
